@startuml ess
    entity EmaiilValidation {
        * id_email_validation : INT
        --
        * name_email_type : VARCHAR
        * status : enum
    }
    entity User {
        * id_user : VARCHAR
        --
        * email : VARCHAR
        * password : VARCHAR
        * verify_email : timestamps
        * user_role : enum
    }
    entity OurCompany {
        nama_company : VARCHAR
        alamat_company : VARCHAR
        contact : VARCHAR
        lattitude :  VARCHAR
        longitude : VARCHAR
        logo : VARCHAR
    }
    entity Employe {
        * id_employee : VARCHAR
        --
        * id_user : VARCHAR
        * NIK : INT
        * nama_lengkap : VARCHAR
        * tempat_lahir : VARCHAR
        * tanggal_lahir : DATE
        * alamat_ktp : VARCHAR
        * pendidikan_terakhir : VARCHAR
        * nama_pendidikan_terakhir : VARCHAR
        * jurusan_pendidikan_terakhir : VARCHAR
        * alamat_email_aktif : VARCHAR
        * no_tlp_aktif : VARCHAR
        * kontak_darurat : VARCHAR
        * no_tlp_kontak_darurat : VARCHAR
        * status_employee : enum 
        * photo_employee : VARCHAR
    }
    entity EmployeSecondaryData {
        * id_employe_secondary : VARCHAR
        --
        * id_employee
        status_npwp : enum
        no_npwp : VARCHAR
        no_kartu_keluarga : VARCHAR
        status_kawin : enum
        tanggungan : INT
        no_rek : VARCHAR
        nama_rek : VARCHAR
        no_bpjs_kesehatan : VARCHAR
        status_bpjs_kesehatan : enum
        status_bpjs_ketenaga_kerjaan : enum
        no_bpjs_ketenagakerjaan : VARCHAR
        created_at : DATE
        updated_at : DATE
    }
    entity EmployeeFile {
        * id_employee_file : VARCHAR
        --
        * id_employee : VARCHAR
        file_bpjs_kesehatan : VARCHAR
        file_bpjs_ketenagakerjaan : VARCHAR
        file_npwp : VARCHAR
        * file_kartu_keluarga : VARCHAR
        * file_ijazah : VARCHAR
        file_sertifikat_keahlian : VARCHAR
        file_ktp : VARCHAR
        created_at : DATE
        updated_at : DATE
    }
    entity Position {
        * id_position : VARCHAR
        --
        * position_name : VARCHAR
    }
    entity EmployeePosition{
        * id_employee_position : VARCHAR
        --
        * id_position : VARCHAR
        * id_employee : VARCHAR
    }
    entity EmployeeMember {
        * id_position_lead: VARCHAR
        * id_position_member : VARCHAR
    }
    entity CurrentCuti {
        * id_employee : VARCHAR
        --
        * sisa_cuti : float
    }
    entity Client {
        * id_client : VARCHAR
        --
        * nama_client : VARCHAR
        * lattitude :  VARCHAR
        * longitude : VARCHAR
        * alamat_client : VARCHAR
    }
    entity Project {
        * id_project : VARCHAR
        -- 
        * id_client : VARCHAR
        * project_name : VARCHAR
    }
    entity EmployeOnProject {
        * id_employe_on_project : VARCHAR
        --
        * id_employee : VARCHAR
        * id_project : VARCHAR
        created_at : VARCHAR
        updated_at : VARCHAR
    }
    entity AbsenConfiguration {
        * minimal_masuk_jam_kerja : TIME(HH:MI)
        * maksimal_masuk_jam_kerja : TIME(HH:MI)
        * durasi_jam_kerja : INT
        * interval_keterlambatan : INT
        * bobot_keterlambatan : float
        * maksimal_bobot_keterlambatan : FLOAT
        * pic_absensi : VARCHAR
    }
    entity Absensi {
        * id_absensi : VARCHAR
        --
        * id_employee : VARCHAR
        id_cuti : VARCHAR
        * tanggal_absen : DATE
        * masuk : TIME
        * pulang : TIME
        * lokasi_absen : enum
        terlambat_kerja : INT
        bobot : float
        over_time : INT
        status_overtime : enum
        keterangan : TEXT
    }
    entity Approval {
        * id_approval : VARCHAR
        --
        * feature_type : enum
        * whos_approv : VARCHAR
        * status_approv : VARCHAR
        * feature_id : VARCHAR
        * tujuan_approval : enum
        crated_at : timestamps
        updated_at : timestamps
        keterangan : TEXT
    }
    entity Notes {
        * id_notes : VARCHAR
        --
        * id_employee : VARCHAR
        * feature_id : VARCHAR
        * Notes : TEXT
        feature_type : VARCHAR
        tujuan_notes : VARCHAR
        created_at : timestamps
    }
    entity TimesheetConfiguration {
        * interval_waktu_pembuatan : INT
        * PIC_timesheet : VARCHAR
    }
    entity Timesheet{
        * id_timesheet : VARCHAR
        --
        * id_employee : VARCHAR
        * created_at : Time
        * updated_at : Time
        updated_at : Date
        * is_holiday : enum
    }
    entity ActivityTimesheet {
        * id_activity : VARCHAR
        --
        * name_activity : VARCHAR
    }
    entity TimesheetDetail {
        * id_detail_timesheet : VARCHAR
        --
        * id_timesheet : VARCHAR
        * id_project : VARCHAR
        * id_activity : VARCHAR
        
        * start_at : HOUR
        * finish_at : HOUR
        * work_description : VARCHAR
    }
    entity CutiConfiguration {
        * status_reset_cuti : enum
        * bulan_reset_cuti : INT
        * factor_reset_cuti : FLOAT
        * maksimal_cuti_perbulan : INT
        * PIC_cuti : VARCHAR
    }
    entity CutiType {
        * id_cuti_type : VARCHAR
        --
        * cuti_type_name : VARCHAR
        * potongan_cuti : FLOAT
        * durasi_waktu_cuti : HOUR
        * ditujukan : ENUM
    }
    entity Cuti {
        * id_cuti : VARCHAR
        --
        * id_employee : VARCHAR
        * id_cuti_type : VARCHAR
        * tanggal_penerbitan_form : DATE
        * tanggal_mulai_cuti : DATE
        tanggal_selesai_cuti : DATE
        * keterangan_cuty : TEXT
        no_tlp : VARCHAR
         alamat_selama_cuty : VARCHAR
        * total_hari : INT
        sedang_di_project : enum
        status_cuti : VARCHAR
    }
    entity CutiWhenOnProject {
        * id_cuti_on_project : VARCHAR
        --
        * id_cuti : VARCHAR
        * id_project : VARCHAR
         nama_atasan_client : VARCHAR
        no_tlp_atasan_client : VARCHAR
        pegawai_pengganti : VARCHAR
        file_approval_client :  VARCHAR
        catatan : TEXT
        issu_by : TEXT
    }
    entity ReimburstmentConfiguration {
        PIC_pertama : VARCHAR
        * PIC_kedua : VARCHAR
    }
    entity ReimburstmentType {
        * id_reimburstment_type 
        --
        * reimbursment_type_name : VARCHAR
    }
    entity Reimburstment {
        * id_reimburstment : VARCHAR
        --
        * id_employee : VARCHAR
        * id_reimburstment_type : VARCHAR
        * no_vourcher : VARCHAR
        * deskripsi_reimburstment : TEXT
        * employee_direct_reimburstment : VARCHAR
        * remburstment_payment_type : enunm   
        * transaction_date : DATE
        * account_code : VARCHAR
        * total_amount : INT
        status_reimburstment : VARCHAR
    }
    entity ReimburstmentTypeTransfert {
        * id_reimburstment_transfert : VARCHAR
        --
        * id_reimburstment : VARCHAR
        * Bank : VARCHAR
        * name_bank : VARCHAR
        * account_no : VARCHAR
        * bank_branch : VARCHAR
    }
    entity ReimburstmentStruckFile {
        * id_reimburstment_struck_file : VARCHAR
        -- 
        * id_reimburstment : VARCHAR
        * struck_reimburstment : VARCHAR
    }

    ' entity StatusApprovReimburstment {
    '     * id_status_reimburstment : VARCHAR
    '     --
    '     * status_approv_lead : enum
    '     * date_approval_lead : DATE
    '     * approval_for_coo : enum
    '     status_approval_coo : enum
    '     date_approval_coo : DATE
    '     * status_approval_hr : enum
    '     * date_approval_hr : DATE
    '     * status_approval_finance : enum
    '     * date_approval_finance : DATE
    '     * status_receipt : enum
    '     * date_receipt : DATE
    ' }

    


User ||--o| Employe :  Employee Account
Employe ||--|| EmployeSecondaryData : Employee secondary data
Employe ||--|| EmployeeFile : EmployeeFile
Position ||--o{ EmployeePosition : Employe Position
Employe ||--|| EmployeePosition : EmployeePosition Lead
EmployeePosition }o--o{ EmployeeMember : Employee Member
Employe ||--o{ Absensi : absen employee
Client ||--o{ Project : Client project
Project ||--o{ EmployeOnProject : project handled
Employe ||-o{ EmployeOnProject : Employee handle projects
EmployeePosition ||--|{ Approval : PIC approval
Positino ||--|| AbsenConfiguration : PIC configuration untuk absensi
Absensi ||--|{ Approval : Absensi Approval
Employe ||--o{ Notes : Employee create notes
Absensi ||--o{ Notes : notes absensi
Employe ||--|| CurrentCuti : Sisa jatah cuti employee
Employe ||--o{ Cuti : Employee mengajukan Cuti
Cuti ||--o{ Absensi : absensi cuti
EmployeePosition ||--|| TimesheetConfiguration : Timeshete PIC and configuration
Timesheet ||--o{ TimesheetDetail : Timesheet detail
ActivityTimesheet ||--|{ TimesheetDetail : Acitivity Timesheet
Timesheet ||--o{ Approval : Approval for timesheet
Timesheet ||--o{ Notes : Notes for timesheet
TimesheetDetail ||--o{ Notes : Notes for timesheet detail
EmployeePosition ||--|| CutiConfiguration : PIC cuti
Employe ||--|{ Timesheet : Employee Timesheet
CutiType ||--|{ Cuti : Cuti Type
Cuti ||--|{ Approval : Approval Cuti
Cuti ||--o{ Notes : Notes For Cuti
Cuti ||--o| CutiWhenOnProject : employee cuti when employee on project
Project ||--|{ CutiWhenOnProject : Project yang dihandle saat cuti
EmployeePosition ||--|| ReimburstmentConfiguration : PIC for reimburstment
ReimburstmentType ||--|{ Reimburstment : pilih type reimburstmen
Employe ||--o{ Reimburstment : Employee mengajukan reimbursement
Reimburstment ||--o| ReimburstmentTypeTransfert : data reimburstment for reimburstment type transfer
Reimburstment ||--o{ Notes : Notes for Reimburstment
Reimburstment ||-|{ Approval : Approval for reimburstment
Reimburstment ||--|{ ReimburstmentStruckFile : struck reimburstment

' Employe ||--|{ Timesheet : Employee Timesheet
' ActivityTimesheet ||--|{ TimesheetDetail : Timesheet Activity
' Project ||--|{ TimesheetDetail : Project in timesheet
' Timesheet ||--|{ TimesheetDetail : Detail Timesheet
' Employe ||--|{ Reimburstment : submit reimbursment
' Reimburstment ||--|{ StatusApprovReimburstment : Approval Reimburstment

@enduml